# terax-ai

./: .git-blame-ignore-revs  .gitattributes  .gitignore  .oxlintrc.json  .pnpm-build-override.json  .prettierignore  .prettierrc.json  .size-limit.json  ADDITIONS.md  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTEXT.md  CONTRIBUTING.md  DESIGN.md  FIX_NOTES.md  JUPYTER_SUPPORT.md  NOTICE  PRODUCT.md  PR_DESCRIPTION.md  README.md  ROADMAP.md  SECURITY.md  TERAX.md  TERMAX.md  TESTING_GUIDE.md  ZOSMA_ARCHITECTURE_ANALYSIS.md  biome.json  components.json  dev-windows.cmd  index.html  latest.json  markdown-preview-demo.md  package-lock.json  package.json  playwright.config.ts  pnpm-lock.yaml  pnpm-workspace.yaml  session.txt  settings.html  (+9 more)
.github/: PULL_REQUEST_TEMPLATE.md  copilot-instructions.md  dependabot.yml
.gsd/: CODEBASE.md
.omx/: i18n-baseline.json
.pi/: settings.json
docker/: Dockerfile  (+1 more)
native/speech-bridge-core/: CMakeLists.txt
native/speech-bridge-core/src/: bridge_protocol.cpp  bridge_protocol.h  main.cpp
native/speech-bridge-core/tests/: bridge_protocol_tests.cpp
src-tauri/: Cargo.toml  Info.plist  entitlements.plist  installer-hooks.nsh  tauri.conf.json  tauri.dev.windows.conf.json  tauri.linux.conf.json  tauri.windows.conf.json
src-tauri/capabilities/: default.json  desktop.json
src-tauri/icons/: icon.icns
src-tauri/nsis/: contextmenu.nsh
src-tauri/src/: bootstarp.rs  lib.rs  main.rs  menu.rs  pty.rs
src-tauri/src/modules/: agent.rs  agent_cli.rs  browser.rs  capabilities.rs  claude_code.rs  claude_usage.rs  codex.rs  codex_auth.rs  codex_usage.rs  copilot.rs  cursor_usage.rs  git.rs  hacktricks.rs  lsp.rs  mcp.rs  mod.rs  model_compare.rs  net.rs  oauth.rs  pi.rs  plantuml.rs  preview.rs  proc.rs  schedule.rs  secrets.rs  shell.rs  shell_integration.rs  speech.rs  ssh.rs  sync.rs  tmux_config.rs  tray.rs  webhook.rs  workspace.rs
src-tauri/src/modules/agents/: antigravity.rs  backend.rs  commands.rs  definition.rs  detection.rs  event.rs  gemini.rs  lease.rs  migrator.rs  mod.rs  probe.rs  registry.rs  runtime.rs  spawn.rs
src-tauri/src/modules/artifacts/: edits.rs  mod.rs  react.rs  react_preview_runtime.js  store.rs  types.rs
src-tauri/src/modules/artifacts/store/: models.rs  support.rs  tests.rs
src-tauri/src/modules/capabilities/: audit.rs  manifests.rs  policy.rs  schemas.rs  state.rs  types.rs
src-tauri/src/modules/capture/: mod.rs  three_d.rs  window_enum.rs
src-tauri/src/modules/fs/: file.rs  grep.rs  mod.rs  mutate.rs  remote.rs  safety.rs  search.rs  ssh.rs  tree.rs  watch.rs  wsl.rs
src-tauri/src/modules/git/: commands.rs  discover.rs  errors.rs  mod.rs  operations.rs  parser.rs  process.rs  types.rs  utils.rs
src-tauri/src/modules/git/operations/: history.rs  tests.rs
src-tauri/src/modules/history/: db.rs  mod.rs
src-tauri/src/modules/lsp/: install.rs  links.rs  local.rs  mod.rs  resolve.rs  root.rs  rss.rs  session.rs  transport.rs
src-tauri/src/modules/mcp/: cli.rs  config_store.rs  connections.rs  oauth.rs  sanitize.rs  server.rs  server_tools.rs  types.rs
src-tauri/src/modules/mcp/connections/: http.rs  mod.rs  stdio.rs
src-tauri/src/modules/notebook/: exec.rs
src-tauri/src/modules/overlay/: drawing.rs  mod.rs  transparency.rs
src-tauri/src/modules/pi/: agent_tools.rs  host.rs  local_agents.rs  mod.rs  native_tools.rs  profile_models.rs  provider_config.rs  skills.rs  state.rs  store.rs  tests.rs  types.rs
src-tauri/src/modules/pi/host/: bridge.rs  paths.rs  protocol.rs  tests.rs  timeouts.rs
src-tauri/src/modules/pi/native_tools/: artifact_tools.rs  fs_tools.rs  mcp_tools.rs
src-tauri/src/modules/pi/state/: compat.rs  requests.rs
src-tauri/src/modules/proc/: job.rs  mod.rs
src-tauri/src/modules/protocols/: ftp.rs  http.rs  mod.rs  smb.rs  ssh.rs
src-tauri/src/modules/pty/: agent_detect.rs  cleanup.rs  da_filter.rs  job.rs  mod.rs  session.rs  shell_init.rs  tests.rs
src-tauri/src/modules/pty/scripts/: bashrc.bash  cmd.bat  img.fish  img.ps1  img.sh  init.fish  powershell.ps1  profile.ps1  zlogin.zsh  zprofile.zsh  zshenv.zsh  zshrc.zsh
src-tauri/src/modules/shell/: background.rs  mod.rs  session.rs
src-tauri/src/modules/skills/: bundled.rs  mod.rs  scanner.rs
src-tauri/src/modules/speech/: install.rs  process.rs  protocol.rs
src-tauri/src/modules/ssh/: commands.rs  connection.rs  handler.rs  manager.rs  mod.rs  profiles.rs  pty.rs  sftp.rs
src-tauri/src/modules/tray/: mod.rs
src-tauri/src/modules/voice/: mod.rs  ptt.rs
src-tauri/src/modules/voice/transcription/: mod.rs
src-tauri/src/modules/voice/tts/: mod.rs  queue.rs
src-tauri/src/modules/voice/wake_word/: mod.rs
src-tauri/tests/: agents_crud.rs  capability_registry.rs  fs_search.rs  git_operations.rs  history_persistence.rs  mcp_lifecycle.rs  mcp_manager.rs  mcp_manager_runtime.rs  mcp_manager_support.rs  mcp_notifications.rs  migration_and_schedule.rs  overlay_annotations.rs  pi_host_protocol.rs  pi_state.rs  ptt_shortcut.rs  schedule_lifecycle.rs  shell_background.rs  skills_scanner.rs  voice_tts.rs  workflow_file_policy.rs  workflow_http_policy.rs
src-tauri/tests/common/: env_guard.rs  mod.rs
(+1350 files in other folders)
