[package]
name = "terax"
version = "0.7.3"
description = "Terax - an open-source AI-native terminal emulator"
authors = ["crynta"]
license = "Apache-2.0"
edition = "2021"
default-run = "terax"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "terax_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[features]
default = []
workflow = ["dep:cron", "dep:chrono", "dep:uuid"]
openclicky = [
    "dep:objc2",
    "dep:objc2-app-kit",
    "dep:objc2-foundation",
    "dep:tauri-plugin-global-shortcut",
    "dep:xcap",
    "tauri/tray-icon",
    "tauri/image-png",
    "tauri/macos-private-api",
]

[lints.rust]
future_incompatible = { level = "warn", priority = -1 }
nonstandard_style = { level = "deny", priority = -1 }

[lints.clippy]
all = { level = "deny", priority = 10 }
perf = { level = "deny", priority = -1 }
clone_on_copy = "deny"
large_enum_variant = "deny"
manual_ok_or = "deny"
needless_collect = "deny"
redundant_clone = "deny"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
sha2 = "0.10"
portable-pty = "0.9"
dirs = "6"
log = "0.4"
ignore = "0.4"
grep-regex = "0.1"
grep-searcher = "0.1"
grep-matcher = "0.1"
globset = "0.4"
shared_child = "1"
tauri-plugin-log = "2"
tauri-plugin-os = "2"
tauri-plugin-store = "2"
tauri-plugin-process = "2"
tauri-plugin-notification = "2"
reqwest = { version = "0.12", default-features = false, features = [
	"blocking",
	"rustls-tls",
	"stream",
] }
bytes = "1"
base64 = "0.22"
futures-util = "0.3"
getrandom = "0.3"
tokio = { version = "1", default-features = false, features = ["rt", "macros", "sync", "time", "net", "io-util"] }
tempfile = "3"
notify = "8.2.0"
tauri-plugin-dialog = "2"
cron = { version = "0.11", optional = true }
chrono = { version = "0.4", features = ["serde"], optional = true }
uuid = { version = "1", features = ["v4", "serde"], optional = true }
objc2 = { version = "0.6", optional = true }
objc2-app-kit = { version = "0.3", optional = true }
objc2-foundation = { version = "0.3", optional = true }
tauri-plugin-global-shortcut = { version = "2", optional = true }
xcap = { version = "0.9", optional = true }

[dev-dependencies]
proptest = "1"

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[target.'cfg(target_os = "macos")'.dependencies]
keyring = { version = "3.6", default-features = false, features = [
	"apple-native",
] }

[target.'cfg(target_os = "windows")'.dependencies]
keyring = { version = "3.6", default-features = false, features = [
	"windows-native",
] }
windows-sys = { version = "0.61", features = [
	"Win32_Foundation",
	"Win32_Security",
	"Win32_System_JobObjects",
	"Win32_System_Threading",
	"Win32_System_Diagnostics_ToolHelp",
] }

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-autostart = "2"
tauri-plugin-updater = "2"
tauri-plugin-window-state = "2"

[profile.dev]
incremental = true

[profile.release]
codegen-units = 1
lto = "fat"
opt-level = "s"
panic = "abort"
strip = true
